--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 <footer class="footer">
   <div class="nav-footer">
     <div class="nav-footer-left">
-<p><br> Copyright © 1983-2025<br> This website was created with <a href="https://quarto.org"><img src=".\images/quarto.png" class="img-fluid" alt="Quarto" width="65"></a></p>
+<p><br> Copyright © 1983-2025<br> This website was created with <a href="https://quarto.org"><img src=".\00_Files/quarto.png" class="img-fluid" alt="Quarto" width="65"></a></p>
 </div>   
     <div class="nav-footer-center">
 <p><br> <strong>Postal address:</strong><br> Canarias<br> <br></p>
